# runtime-ffi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
include/mun/: function.h  gc.h  invoke_fn.h  invoke_result.h  marshal.h  reflection.h  runtime.h  runtime_capi.h  struct.h  struct_ref.h  type_info.h
tests/: CMakeLists.txt  extern.cc  marshal.cc  md5.cpp  runtime.cc  runtime.cpp
tests/sources/: fibonacci.mun  marshal.mun
